styles/task_form.css
.form_content{
    display: flex;
    flex-direction: column;
    justify-content: center;

    gap: 32px;
}

.task_input_wrapper{
    display: flex;
    flex-direction: column;
    gap: 8px;
    font-size: 20px;
    position: relative;
}

.task_input_column{
    display: flex;
    flex-direction: column;
    flex: 1;
    gap: 24px;
}

.textarea_height{
    height: 120px !important;
}

.required_symbole{
    color: var(--c-warn);
}

/* Priority Button ----------------------------------------------------- */

.priority_input{
    display: flex;
    gap: 8px;
}

.priority_button{
    border-radius: 10px;
    padding: 16px 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    flex: 1;
    font-size: 20px;
    border: none;
    box-shadow: 0 0 4px 0 #0000001A;
}

.priority_btn_c_txt_default{
    color: var(--c-btn-text-var1);
}

.priority_button:hover{
    box-shadow: 0 4px 4px 0 #00000040;
    cursor: pointer;
}

.medium_color_default{
    color: var(--c-pr-medium);
    background-color: var(--c-btn-default-var2);
}

.medium_color_click{
    background-color: var(--c-pr-medium);
    color: var(--c-btn-text-var2);
}

.medium_color_click:hover{
    box-shadow: none;
    cursor: default;
}

.urgent_color_default{
    color: var(--c-pr-urgent);
    background-color: var(--c-btn-default-var2);
}

.urgent_color_click{
    background-color: var(--c-pr-urgent);
    color: var(--c-btn-text-var2);
}

.urgent_color_click:hover{
    box-shadow: none;
    cursor: default;
}

.low_color_default{
    color: var(--c-pr-low);
    background-color: var(--c-btn-default-var2);
}

.low_color_click{
    background-color: var(--c-pr-low);
    color: var(--c-btn-text-var2);
}

.low_color_click:hover{
    box-shadow: none;
    cursor: default;
}

.priority_button_shadow_click{
    box-shadow: none;
}


/* Persons to assign to */

.selection{
    list-style-type: none;
    max-height: 288px;
    background-color: var(--bg-c-sel-var1);
    padding: 0;
    gap: 2px;
    overflow-y: auto;
    border-radius: 10px;
}

.selection li{
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 56px;
    border-radius: 10px;
    padding: 7px 16px;
    margin: 1px 0;
}

.selection li:hover{
    cursor: pointer;
    background-color: var(--bg-c-sel-hover-var1);
}

.person_selected{
    background-color: var(--bg-c-sel-selected);
    color: var(--c-text-selected);
}

.person_selected:hover{
    background-color: var(--bg-c-sel-hover-var2) !important;
}

.hidden{
    display: none;
}

.selection_color_container{
    background-color: var(--bg-c-sel-var1);
    border-radius: 10px;
}

.selection_color_container:hover{
    box-shadow: 0 0 14px 3px #0000000A;
}

.person_info{
    display: flex;
    align-items: center;
    gap: 18px;
}

.input_field_icon_task {
    position: absolute;
    right: 15px;
    top: 25%;
    cursor: pointer;
    border-radius: 50%;
}

.input_field_icon_task:hover{
    background-color: var(--bg-c-sel-hover-var1);
}

button.input_field{
    background-color: white;
    text-align: start;
    cursor: pointer;
}

.selected_persons_container{
    display: flex;
    gap: 8px;
}

/* Subtasks -----------------------------------------------------------------------------------------------  */

.pad_8{
    padding: 8px;
}

.icon_separator_input{
    border: 1px solid #A8A8A8;
    height: 24px;
}

.subtask_input_icon_wrapper {
    position: absolute;
    display: flex;
    align-items: center;
    height: 100%;
    right: 12px;
    top: 0;
    gap: 4px;
    cursor: pointer;

    color: transparent;
}

.icon_height_24 {
    height: 75%;
}

.input_field_icon_subtasks{
    border-radius: 50%;
    color: transparent;
    height: 32px;
    width: 32px;
}

.input_field_icon_subtasks:hover{
    background-color: var(--bg-c-sel-hover-var1);
}

.subtasks_container{
    font-size: 16px;
    display: flex;
    flex-direction: column;
    gap: 8px;
    list-style-position: inside;
    padding: 0;
}

.subtask_bulletpoint{
    position: relative;
    padding: 6px 16px 6px 30px;
}

.subtask_bulletpoint:hover{
    background-color: var(--bg-c-sel-hover-var1);
    border-radius: 10px;
    cursor: pointer;
}

.subtask_bulletpoint:hover .subtask_input_icon_wrapper{
    color: #2A3647;
}

.icon_separator_task{
    border: 1px solid transparent;
    height: 24px;
}

.subtask_bulletpoint:hover .icon_separator_task{
    border: 1px solid #A8A8A8;
}

.edit_subtask{
    position: relative;
    list-style-type: none;
    color: black;
}

.edit_overlay{
    position: absolute;
    width: 100%;
    top: 0;
    left: 0;
    height: 32px;
}

.subtask_icon_wrapper {
    position: absolute;
    display: flex;
    align-items: center;
    height: 100%;
    right: 12px;
    top: 0;
    gap: 4px;
    cursor: pointer;

    color: transparent;
}

.subtask_icon_wrapper svg:hover{
    transform: scale(1.1);
}

.icon_separator_subtask{
    border-right: 1px solid transparent;
    border-top: none;
    border-bottom: none;
    border-left: none;
    height: 20px;
}

.edit_subtask_input{
    width: 100%;
    padding: 4px 16px;
    font-size: 16px;
    background-color: white;
    border-top: none;
    border-right: none;
    border-left: none;
    border-bottom: 1px solid var(--border-c-active);
    height: 32px;
}

.subtask_bulletpoint:hover .subtask_icon_wrapper{
    color:black;
}

.subtask_bulletpoint:hover .icon_separator_subtask{
    border-right: 1px solid #A8A8A8;
}

.edit_subtask_input:focus{
    border-top: none;
    border-right: none;
    border-left: none;
    border-bottom: 1px solid var(--border-c-active);
    outline: none;
}

.add_task_buttons{
    display: flex;
    gap: 16px;
}

.input_field.taskerror {
    border: 2px solid var(--c-warn) !important;
}

.warning{
    position: absolute;
    bottom: -18px;
    font-size: 12px;
    color: var(--c-warn);
}

@media(max-width: 1000px){

    .task_input_wrapper{
        font-size: 16px;
    }

    .fs_mobil_16{
        font-size: 16px !important;
    }

    .priority_button{
        font-size: 16px;
    }

    .main_content_column{
        gap: 24px;
    }

    .form_content{
        gap: 24px;
    }
}


@media(max-width: 850px){

    .task_input_area{
        flex-direction: column;
        gap: 24px;
    }

}


@media(max-width: 400px){

    .priority_button{
        flex-direction: column;
    }

}

